# chess-editor

./: CLAUDE.md  README.md  pyproject.toml  render.yaml
.claude/: session-start.sh  settings.json
.claude/commands/: speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.devcontainer/: Dockerfile  devcontainer.json
.specify/memory/: constitution.md
.specify/scripts/: create-spec.sh
.specify/specs/: 01-board-rendering-plan.md  01-board-rendering-tasks.md  01-board-rendering.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
src/chess_editor/: __init__.py  board.py  main.py  web.py
src/chess_editor/utils/: __init__.py
