[project]
name = "chess-editor"
version = "0.1.0"
description = "A terminal-based chess board editor for creating custom chess positions"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
]

[project.scripts]
chess-editor = "chess_editor.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
